# testing-journey-pytest-mypy-flake8

./: README.md  setup.cfg
src/slapping/: slap.py
tests/: conftest.py  test_slapping.py
