[metadata]
name = slapping
description = Slapping your buddy
author = Eldar Dragomir
license = MIT
license_file = LICENSE 
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    slapping
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    requests>=2.26
    flake8>=3.9
    tox>=3.24
    pytest>=6.2
    pytest-cov>=2.12.1
    mypy>=0.91

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160